[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'map-bridge-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-map-bridge/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '2.0.0' }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }

# local dependencies
pallet-template = { path = '../pallets/template', default-features = false, version = '2.0.0' }
map-mmr = { path = '../pallets/map-mmr', default-features = false, version = '2.0.0' }
map-mmr-primitive = { default-features = false, path = "../pallets/map-mmr/primitive" }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
frame-executive = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '2.0.0' }
pallet-aura = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }
pallet-grandpa = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
pallet-sudo = { default-features = false, version = '2.0.0' }
pallet-timestamp = { default-features = false, version = '2.0.0' }
pallet-transaction-payment = { default-features = false, version = '2.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.0' }
sp-api = { default-features = false, version = '2.0.0' }
sp-block-builder = { default-features = false, version = '2.0.0' }
sp-consensus-aura = { default-features = false, version = '0.8.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-inherents = { default-features = false, version = '2.0.0' }
sp-offchain = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-session = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-transaction-pool = { default-features = false, version = '2.0.0' }
pallet-utility = { version = "2.0.0", default-features = false }
pallet-babe = { version = "2.0.0", default-features = false }
sp-consensus-babe = { version = "0.8.0", default-features = false }
pallet-authority-discovery = { version = "2.0.0", default-features = false }
pallet-authorship = { version = "2.0.0", default-features = false }
pallet-session = { version = "2.0.0", features = ["historical"], default-features = false }
pallet-session-benchmarking = { version = "2.0.0", default-features = false, optional = true }
pallet-im-online = { version = "2.0.0", default-features = false }
pallet-staking = { version = "2.0.0", default-features = false }
pallet-staking-reward-curve = { version = "2.0.0", default-features = false }
sp-version = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    "pallet-utility/runtime-benchmarks",
    'sp-runtime/runtime-benchmarks',
    "pallet-babe/runtime-benchmarks",
    "pallet-session-benchmarking",
    "pallet-im-online/runtime-benchmarks",
    "pallet-staking/runtime-benchmarks",
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'map-mmr/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    "pallet-utility/std",
    "pallet-babe/std",
    "sp-consensus-babe/std",
    'sp-transaction-pool/std',
    "pallet-authorship/std",
    "pallet-authority-discovery/std",
    "pallet-session/std",
    "pallet-im-online/std",
    "pallet-staking/std",
    'sp-version/std',
    "map-mmr-primitive/std",
]
