[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'mapbridge-runtime-wasm'
version = '1.0.0'
[dependencies.mapbridge-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['mapbridge-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
