[package]
name = "map-mmr-rpc"
version = "2.0.0"
authors = ["map-bridge"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME Merkle Mountain Range pallet."

[dependencies]
# crates
codec               = { package = "parity-scale-codec", version = "1.3.5" }
jsonrpc-core        = { version = "15.1.0" }
jsonrpc-core-client = { version = "15.1.0" }
jsonrpc-derive      = { version = "15.1.0" }

map-mmr-rpc-runtime-api = { path = "./runtime-api" }
# substrate
sp-api        = { version = "2.0.0", default-features = false }
sp-blockchain = { version = "2.0.0", default-features = false }
sp-runtime    = { version = "2.0.0", default-features = false }
