[package]
name = "map-mmr-rpc-runtime-api"
version = "2.0.0"
authors = ["map-bridge"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME Merkle Mountain Range pallet."

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
serde = { version = "1.0.118", optional = true, features = ["derive"] }

frame-support = { version = "2.0.0", default-features = false }
# substrate
sp-api     = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std     = { version = "2.0.0", default-features = false }
map-mmr-primitive = { default-features = false, path = "../../primitive" }

[features]
default = ["std"]

std = [
	"codec/std",
	"serde",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"map-mmr-primitive/std",
]
